EoD, need to link .PDF in /prosjekt + MATLAB

--- a/html/Kevin.html
+++ b/html/Kevin.html
@@ -2,28 +2,35 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Kevin</title>
   <link rel="stylesheet" href="../css/master.css">
 </head>
 <body class="background">
+  <!-- navbar start  do not touch-->
   <nav class="navbar flex">
     <div class="dropdown">
-      <h1 class=" textbase" style="margin-left: 3em;">Medlemmer</h1>
+      <h2 class=" textbase" style="margin-left: 3em;">Medlemmer</h2>
       <div class="dropdown-content primary-bg" style="margin-left: 3em;">
         <p><a href="./thomas.html"> Thomas</a></p>
         <p><a href="./kevin.html"> Kevin</a></p>
         <p><a href="./fred.html"> Fred</a></p>
         <p><a href="./sebastian.html">Sebastian </a></p>
         <p><a href="./gunnar.html"> Gunnar</a></p>
-
       </div>
     </div>
-    <h1 class="textbase">Kevin</h1>
-    <h1 class="textbase" style="margin-right: 5em;">  <a href="./main.html"> Main</a> </h1>
-
+    <div class="dropdown">
+      <h2 class="textbase">Prosjekter</h2>
+      <div class="dropdown-content primary-bg" style="margin-left: 3em;">
+        <p><a href="./prosjekt.html">Ingeniør</a></p>
+        <p><a href="./matlab.html">MATLAB</a></p>
+      </div>
+    </div>
+    <h2 class="textbase">Kevin</h2>
+    <h2 class="textbase" style="margin-right: 5em;">  <a href="./main.html" id="hover"> Main</a> </h2>
   </nav>
   <div class="navbar-margin">
   </div>
+  <!-- navbar end -->
   <div class="section">
     <div class="content-main">
       <div class="cat">
@@ -55,7 +62,7 @@
             <br>
             <br>
             <br>
-            <p style="font-size: 30px; top:0px; color: ">
+            <p style="font-size: 30px; top:0px;">
               Nedenfor ser dere en tabell som forteller litt mer om hva jeg liker. </p>
 
       </div>
@@ -63,44 +70,37 @@
   </div>
   <div class="section">
     <div class="content-main">
-      <div class="cat">
-
-
-        <style>
-        table{border: 5px solid darkred; font-size: 25px; width: 100%;}
-        td{border: 1px solid black; font-size: 25px;  }
-        li{font-size: 25px;}
-        </style>
-        <table>
+      <div class="cat" style="font-size: 25px;">
+        <table class="tab-kev">
           <tr>
-          <td> AKTIVITETER </td>
-          <td> MAT </td>
-          <td> FAGLIG </td>
+          <td class="td-kev"> AKTIVITETER </td>
+          <td class="td-kev"> MAT </td>
+          <td class="td-kev"> FAGLIG </td>
         </tr>
         <tr>
-          <td> 1. Fotball </td>
-          <td> 1. Taco </td>
-          <td> 1. IT </td>
+          <td class="td-kev"> 1. Fotball </td>
+          <td class="td-kev"> 1. Taco </td>
+          <td class="td-kev"> 1. IT </td>
         </tr>
         <tr>
-          <td> 2. Basketball </td>
-          <td> 2. Pizza </td>
-          <td> 2. Mattematikk </td>
+          <td class="td-kev"> 2. Basketball </td>
+          <td class="td-kev"> 2. Pizza </td>
+          <td class="td-kev"> 2. Mattematikk </td>
         </tr>
         <tr>
-          <td> 3. Turn </td>
-          <td> 3. Sjømat </td>
-          <td> 3. Økonomi </td>
+          <td class="td-kev"> 3. Turn </td>
+          <td class="td-kev"> 3. Sjømat </td>
+          <td class="td-kev"> 3. Økonomi </td>
         </tr>
         <tr>
-          <td> 4. Friidrett </td>
-          <td> 4. Pasta </td>
-          <td> 4. Biologi </td>
+          <td class="td-kev"> 4. Friidrett </td>
+          <td class="td-kev"> 4. Pasta </td>
+          <td class="td-kev"> 4. Biologi </td>
         </tr>
         <tr>
-          <td> 5. Svømming </td>
-          <td> 5. Tandori </td>
-          <td> 5. Gym
+          <td class="td-kev"> 5. Svømming </td>
+          <td class="td-kev"> 5. Tandori </td>
+          <td class="td-kev"> 5. Gym
           </table>
           <br>
         <p style="font-size: 18px; "> Lurer dere på noe mer, ta kontakt da vel ----> <a href="https://www.facebook.com/kevin.eriksen.399"> Min facebook profil..</a> </p>
@@ -117,6 +117,6 @@
       </div>
     </div>
   </div>
+  <script src="../js/master.js"></script>
 </body>
-<script src="../js/master.js"></script>
 </html>
