--- a/html/matlab.html
+++ b/html/matlab.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>Sebastian</title>
+  <title>Main</title>
   <link rel="stylesheet" href="../css/master.css">
 </head>
 <body class="background">
@@ -25,40 +25,21 @@
         <p><a href="./matlab.html">MATLAB</a></p>
       </div>
     </div>
-    <h2 class="textbase">Sebastian</h2>
+    <h2 class="textbase">MATLAB</h2>
     <h2 class="textbase" style="margin-right: 5em;">  <a href="./main.html" id="hover"> Main</a> </h2>
   </nav>
   <div class="navbar-margin">
   </div>
   <!-- navbar end -->
-  <div class="navbar-margin">
-  </div>
   <div class="section">
     <div class="content-main">
       <div class="cat">
-        <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/54222376_1138687156297782_8218474351016542208_n.jpg?_nc_cat=110&_nc_oc=AQkUq2V0y9JXT4yFdZ_7Z0SPIMwbBm5uRm5ARAHJUV7cDSNlpvajdM3NQWdj5etdNd0&_nc_ht=scontent-arn2-1.xx&oh=5fb3a36844b4e5654851e19977de8f29&oe=5DEF9BF6" alt="Meg" style="width:40%">
-        <table>
-          <tr>
-            <td>20 år</td>
-          </tr>
-          <tr>
-            <td>Er fra Bergen</td>
-          </tr>
-          <tr>
-            <td>Du kan få tak i meg på denne linken</td>
-          </tr>
-          <tr>
-            <td> <a href="https://www.facebook.com/profile.php?id=100010308436448">facebook.com </a></td>
-          </tr>
-
-      </table>
       </div>
     </div>
   </div>
   <div class="section">
     <div class="content-main">
       <div class="cat">
-
       </div>
     </div>
   </div>
