--- a/html/prosjekt.html
+++ b/html/prosjekt.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="nb" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Proj</title>
   <link rel="stylesheet" href="../css/master.css">
 </head>
 <body class="background">
   <!-- navbar start  do not touch-->
   <nav class="navbar flex">
     <div class="dropdown">
-      <h1 class=" textbase" style="margin-left: 3em;">Medlemmer</h1>
+      <h2 class=" textbase" style="margin-left: 3em;">Medlemmer</h2>
       <div class="dropdown-content primary-bg" style="margin-left: 3em;">
         <p><a href="./thomas.html"> Thomas</a></p>
         <p><a href="./kevin.html"> Kevin</a></p>
@@ -18,37 +18,40 @@
         <p><a href="./gunnar.html"> Gunnar</a></p>
       </div>
     </div>
-    <h1 class="textbase">WIP</h1>
-    <h1 class="textbase" style="margin-right: 5em;">  <a href="./main.html"> Main</a> </h1>
+    <div class="dropdown">
+      <h2 class="textbase">Prosjekter</h2>
+      <div class="dropdown-content primary-bg" style="margin-left: 3em;">
+        <p><a href="./prosjekt.html">Ingeniør</a></p>
+        <p><a href="./matlab.html">MATLAB</a></p>
+      </div>
+    </div>
+    <h2 class="textbase">Ingeniør-prosjekt</h2>
+    <h2 class="textbase" style="margin-right: 5em;">  <a href="./main.html" id="hover"> Main</a> </h2>
   </nav>
   <div class="navbar-margin">
   </div>
   <!-- navbar end -->
-  <div class="section">
-    <div class="content-main">
-      <div class="cat">
-        <h1 style="font-size: 7rem;"> <strong>WIP</strong> </h1>
-      </div>
-    </div>
-  </div>
-  <div class="section">
-    <div class="content-main">
-      <div class="cat">
-      </div>
-    </div>
-  </div>
-  <div class="section">
-    <div class="content-main">
-      <div class="cat">
-      </div>
-    </div>
-  </div>
-  <div class="section">
-    <div class="content-main">
-      <div class="cat">
-      </div>
-    </div>
-  </div>
+<div class="padding-1">
+  <h4>Vår idé går hovedsaklig ut på å lage en app for drivstoffpriser som vi ønsker å holde oppdatert 24/7. Appen vil importere lokasjoner på bensinstasjoner over hele Norge via google-maps API. For å holde drivstoffpriser oppdatert 24/7 vil vi trenge et samarbeid med bensinstasjonene, der vi utvikler en API på tvers av selskapene eller en API for hvert selskap. Dersom samarbeid med bensinstasjonene ikke er gjørebart vil vi gjøre dette gjennom crowdsourcing. <br><br>
+
+Appen sin målgruppe vil være unge voksne, ettersom det er hovedsaklig unge som er teknologi drivende. Etterhvert som appen blir mer og mer omtalt vil vi sannsynligvis få eldre kunder også.<br><br>
+Men alle som har førerbevis er potensielle kunder eller brukere for appen. Ettervert som flere unge får førerkort vil vi få flere sannsynlige kunder.<br><br>
+
+Vi et behov for at vi starter ett samarbeid med alle bensinstasjonene for å lage en eller flere APIer som automatisk vil holde databasen oppdatert 24/7 . Dette vil produsere det beste resultatet. Vi vil også trenge tilgang til google-maps sin API som lar oss importere alle bensinstasjoner. Vi vil også være avhengige av at folk faktisk bruker vår app.<br><br>
+
+For øyeblikket er det et par kjeder som allerede har en nettside/app. YX på sin side har en nettside som oppdaterer prisene sine daglig. I tillegg har de en oversikt over årsaker til prisendringer og hvordan du skal kjøre/fylle for å spare mest penger. Circle K har både en nettside og en app som viser drivstoffpriser. De har også en kart-funksjon med markeringer på hvor alle stasjonene over hele landet ligger.<br><br>
+
+For øyeblikket eksisterer det en app som heter BensinPris som baserer seg på crowdsourcing. For øyeblikket er appen rangert dårlig. Det har også vert omtalt flere nettsider eller apper som har blitt opprettet og floppet etter kort tid. Det er derfor et marked med konkurrenter men med dårlige løsninger.<br><br>
+
+Prosjektet har oppstart 01.10.19, oppstartsperioden varer fra 01.10.19 til 01.01.20. Vi har release i jan.20 og begynner da å få inntekter som markerer driftsperioden som vi har kartlagt frem til juli.21 som er da vi begynner å gå i pluss.<br><br>
+
+Vi regner med faste kostnader på 148 625Kr i måneden, 60 113 kr i variable kostnader under første måned. Vi forventer 2000Kr i reise kostnader per måned. Totalt utgifter frem til vi begynner å få inntekter er 712 113Kr. Vi forventer at Inntekten vil stabilisere seg på 197 000Kr etter noen måneder etter release.<br><br>
+Det er hovedsaklig 3 større risiki ved prosjektet. Den første er at vi planlegger prosjektet dårlig. Den andre er at noen utvikler et produkt/tjeneste som er bedre enn vår. Den siste vil være feil i budsjettet som forårsaker at vi går i underskudd isteden for overskudd.<br><br>
+  </h4>
+  <h2 class="button"><a class="warning" href="www.shorturl.at/dfvRS">Nedlastningsside for full rapport (statusrapport) </a></h2>
+  <h2 class="button"><a class="warning" href="https://github.com/h587729/ING102/blob/master/div%20prosjekt.%20ikke%20del%20av%20HTML/Nettstedapp-for-drivstoffpriser.docx">Nedlastningsside for Prosjektbeskrivelse </a></h2><br>
+  <img src="https://images.adsttc.com/media/images/5da3/9ead/3312/fd25/b100/00de/slideshow/stringio.jpg?1571004070" alt="Gas station photo" style="width: 40%">
+</div>
+  <script src="../js/master.js"></script>
 </body>
-<script src="../js/master.js"></script>
 </html>
