--- a/html/Thomas.html
+++ b/html/Thomas.html
@@ -2,26 +2,35 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Thomas</title>
   <link rel="stylesheet" href="../css/master.css">
 </head>
 <body class="background">
+  <!-- navbar start  do not touch-->
   <nav class="navbar flex">
     <div class="dropdown">
-      <h1 class=" textbase" style="margin-left: 3em;">Medlemmer</h1>
+      <h2 class=" textbase" style="margin-left: 3em;">Medlemmer</h2>
       <div class="dropdown-content primary-bg" style="margin-left: 3em;">
         <p><a href="./thomas.html"> Thomas</a></p>
         <p><a href="./kevin.html"> Kevin</a></p>
         <p><a href="./fred.html"> Fred</a></p>
         <p><a href="./sebastian.html">Sebastian </a></p>
         <p><a href="./gunnar.html"> Gunnar</a></p>
-
       </div>
     </div>
-    <h1 class="textbase">Thomas</h1>
-    <h1 class="textbase" style="margin-right: 5em;">  <a href="./main.html"> Main</a> </h1>
-
+    <div class="dropdown">
+      <h2 class="textbase">Prosjekter</h2>
+      <div class="dropdown-content primary-bg" style="margin-left: 3em;">
+        <p><a href="./prosjekt.html">Ingeniør</a></p>
+        <p><a href="./matlab.html">MATLAB</a></p>
+      </div>
+    </div>
+    <h2 class="textbase">Thomas</h2>
+    <h2 class="textbase" style="margin-right: 5em;">  <a href="./main.html" id="hover"> Main</a> </h2>
   </nav>
+  <div class="navbar-margin">
+  </div>
+  <!-- navbar end -->
   <div class="navbar-margin">
   </div>
   <div class="section">
@@ -64,6 +73,6 @@
       </div>
     </div>
   </div>
+  <script src="../js/master.js"></script>
 </body>
-<script src="../js/master.js"></script>
 </html>
