Added img for linking

--- a/html/Thomas.html
+++ b/html/Thomas.html
@@ -45,24 +45,21 @@
   <div class="section">
     <div class="content-main">
       <div class="cat">
-
         <h1 style= "font-size: 24px">Jeg er 23 år og kommer fra Os,Hordaland.</h1>
         <h1 style= "font-size: 24px">Jeg er student på Hvl, campus Førde og studere Informasjonsteknologi.</h1>
         <h1 style= "font-size: 24px">Studentsamfunnet her i Førde er veldig bra. Her er det masse sosiale arrangementer som alle kan være med på.</h1>
         <h1 style= "font-size: 24px">Dette er alt i fra fotball i Førdehuset, volleyball og klatring i Sunnfjordhallen eller quiz på Akutten.</h1>
         <h1 style= "font-size: 24px">På fritiden min liker jeg være i aktivetet, blant anna spille fotball eller trene styrke.</h1>
-
-
-
       </div>
     </div>
   </div>
   <div class="section">
     <div class="content-main">
       <div class="cat">
-        <a href="https://www.facebook.com/thomas.kopperud.5">Trykk her for Thomas sin Facebook. </a>
-        <a href="main.html">Trykk her for å komme tilbake til startsiden. </a>
-
+        <p>
+        <a class="info"  href="https://www.facebook.com/thomas.kopperud.5">Trykk her for Thomas sin Facebook. </a> <br>
+        <a class="info" href="main.html">Trykk her for å komme tilbake til startsiden. </a>
+        </p>
       </div>
     </div>
   </div>
