--- a/html/prosjekt.html
+++ b/html/prosjekt.html
@@ -48,8 +48,8 @@ Prosjektet har oppstart 01.10.19, oppstartsperioden varer fra 01.10.19 til 01.01
 Vi regner med faste kostnader på 148 625Kr i måneden, 60 113 kr i variable kostnader under første måned. Vi forventer 2000Kr i reise kostnader per måned. Totalt utgifter frem til vi begynner å få inntekter er 712 113Kr. Vi forventer at Inntekten vil stabilisere seg på 197 000Kr etter noen måneder etter release.<br><br>
 Det er hovedsaklig 3 større risiki ved prosjektet. Den første er at vi planlegger prosjektet dårlig. Den andre er at noen utvikler et produkt/tjeneste som er bedre enn vår. Den siste vil være feil i budsjettet som forårsaker at vi går i underskudd isteden for overskudd.<br><br>
   </h4>
-  <h2 class="button"><a class="warning" href="www.shorturl.at/dfvRS">Nedlastningsside for full rapport (statusrapport) </a></h2>
-  <h2 class="button"><a class="warning" href="https://github.com/h587729/ING102/blob/master/div%20prosjekt.%20ikke%20del%20av%20HTML/Nettstedapp-for-drivstoffpriser.docx">Nedlastningsside for Prosjektbeskrivelse </a></h2><br>
+  <h2 class="button"><a class="warning" href="https://github.com/h587729/ING102/blob/master/div%20prosjekt.%20ikke%20del%20av%20HTML/Ing102%20Del%203.pdf">Nedlastningsside for full rapport (statusrapport) </a></h2>
+  <h2 class="button"><a class="warning" href="https://github.com/h587729/ING102/blob/master/div%20prosjekt.%20ikke%20del%20av%20HTML/Prosjektbeskrivelse%20ING102.pdf">Nedlastningsside for Prosjektbeskrivelse </a></h2><br>
   <img src="https://images.adsttc.com/media/images/5da3/9ead/3312/fd25/b100/00de/slideshow/stringio.jpg?1571004070" alt="Gas station photo" style="width: 40%">
 </div>
   <script src="../js/master.js"></script>
