--- a/html/matlab.html
+++ b/html/matlab.html
@@ -31,30 +31,62 @@
   <div class="navbar-margin">
   </div>
   <!-- navbar end -->
-  <div class="section">
-    <div class="content-main">
-      <div class="cat">
-      </div>
-    </div>
-  </div>
-  <div class="section">
-    <div class="content-main">
-      <div class="cat">
-      </div>
-    </div>
-  </div>
-  <div class="section">
-    <div class="content-main">
-      <div class="cat">
-      </div>
-    </div>
-  </div>
-  <div class="section">
-    <div class="content-main">
-      <div class="cat">
-      </div>
-    </div>
-  </div>
+        <pre>
+        <code style="display: block">function simple_gui2
+% SIMPLE_GUI2 Select a data set from the pop-up menu and display
+f = figure('Position',[300,300,500,300]);
+h = [];    % Construct the components.
+h(1) = uicontrol('Style','popupmenu',...
+'String',{'Peaks','Membrane','Sinc'},...
+'Position',[335,20,100,25],...
+'Callback',@popup_menu_Callback);
+h(2) = axes('Units','pixels','Position',[50,30,255,255]);
+% Assure resize automatically.
+f.Units = 'normalized';
+set(h, 'Units', 'normalized');
+set(h, 'FontSize', 12);
+% Generate the data to plot.
+peaks_data = peaks(35);
+membrane_data = membrane;
+[x,y] = meshgrid(-8:.5:8);
+r = sqrt(x.^2+y.^2) + eps;
+sinc_data = sin(r)./r;
+% Create a plot in the axes.
+current_data = peaks_data;
+surf(current_data);
+[X,Y,Z] = peaks;
+surf(X,Y,Z)
+xlabel('X axis');
+ylabel('Y axis');
+zlabel('Z axis');
+xlim([150 100])
+ylim([200 100])
+zlim([150 50])
+    function timerCallback(hObj, eventdata)
+[x, y, z ] = sphere(40);
+direction = [0 0 5];
+rotate(s, direction, 1)
+    end
+
+%  Pop-up menu callback.
+Read the pop-up menu Value property to
+function popup_menu_Callback(source,eventdata)
+% Determine the selected data set.
+str = get(source, 'String');
+val = get(source,'Value');
+% Set current data to the selected data set.
+switch str{val};
+case 'Peaks' % User selects Peaks.
+current_data = peaks_data;
+case 'Membrane'
+current_data = membrane_data;
+case 'Sinc'
+current_data = sinc_data;
+end
+surf(current_data);
+end
+end</code>
+</pre>
   <script src="../js/master.js"></script>
 </body>
 </html>
