MATLAB page EoP

--- a/html/matlab.html
+++ b/html/matlab.html
@@ -87,6 +87,9 @@ surf(current_data);
 end
 end</code>
 </pre>
+<img src="https://raw.githubusercontent.com/h587729/ING102/master/div%20prosjekt.%20ikke%20del%20av%20HTML/75282340_989984634695367_3618282597081153536_n.png" alt="MATLABpic1">
+<img src="https://raw.githubusercontent.com/h587729/ING102/master/div%20prosjekt.%20ikke%20del%20av%20HTML/78289370_3090477030968670_7679868439732682752_n.png" alt="MATLABpic2">
+<img src="https://raw.githubusercontent.com/h587729/ING102/master/div%20prosjekt.%20ikke%20del%20av%20HTML/76605247_427738641257120_275437944909594624_n.png" alt="MATLABpic3">
   <script src="../js/master.js"></script>
 </body>
 </html>
